--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.idea/.name
+.idea/encodings.xml
+.idea/lab-ai-chat-bot.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/workspace.xml
