--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,41 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-.idea/.name
-.idea/encodings.xml
-.idea/lab-ai-chat-bot.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+
+#############
+## Python
+#############
+
+*.py[cod]
+
+# Packages
+*.egg
+*.egg-info
+dist/
+build/
+eggs/
+parts/
+var/
+sdist/
+develop-eggs/
+.installed.cfg
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+
+#Translations
+*.mo
+
+#Mr Developer
+.mr.developer.cfg
+
+
+#############
+## PyCharm
+#############
+
+.idea/
